--- a/style/main.css
+++ b/style/main.css
@@ -1,72 +1,134 @@
-:root {
-    --vermelho: #E50914;
-    --preta: #141414;
+:root{
+    --vermelho:#E50914;
+    --preta:#141414;
 }
 
-* {
-    margin: 0;
-    padding: 0;
+*{
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
 
-
-/*ELEMENTOS BASE*/
-
-body {
-    background-color: var(--preta);
-    font-family: 'Times New Roman', Times, Serif, Bebas Neue;
-    color: white;
+/*elementos base*/
+body{
+   background: var(--preta);
+   font-family: 'Arial', Times, serif;
+   color:white;
 }
 
-header .container {
-    display: flex;
+
+header .container{
+    display:flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    padding-top: 10;
+    justify-content: space-between;
+    
 }
 
-header .logo {
+header .logo{
     margin-left: 5px;
     color: var(--vermelho);
     font-family: 'Arial Black', Times;
-    font-size: 40px;
+    font-size:40px;
 }
 
-header nav a {
-    text-decoration: none;
+header nav a{
+    text-decoration:none;
+    color:#AAA;
     margin-right: 10px;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    color: whitesmoke;
-    font-size: 15px;
-}
-
-.column {
-    background-color: var(--preta);
-    font-size: 20px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    ;
-}
-
-header nav a:hover {
-    color: #fff;
 }
 
 
-/*FILME PRINCIPAL - TRENDING*/
+header nav a:hover{
+    color:#fff;
+}
 
-.filme-principal {
-    font-size: 35px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: linear-gradient(rgba(0, 0, 0, .50), rgba(0, 0, 0, .50)), url('/img/2.jpg');
-    height: 400px;
-    background-size: cover;
+/*filme principal*/
+.filme-principal{
+    font-size:16px;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),  url('/img/capa-house.jpg');
+
+    height:400px;
+    background-size:cover;
+ 
+
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: flex-start;
 }
 
-.filme-principal .container .descricao {
+
+.filme-principal .descricao{
+    margin-top: 10px;
     margin-bottom: 40px;
 }
+
+
+.filme-principal .titulo{
+    margin-top: 15%;
+    font-size: 40px;
+    font-family: 'Trebuchet MS', Arial, sans-serif;
+}
+
+.botao{
+    background-color: rgba(0,0,0,.50);
+    border:none;
+    color: white;
+
+    padding:15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+}
+
+.botao:hover{
+    background-color:white;
+    color:black;
+}
+
+.botao i{
+    margin-right: 8px;
+}
+
+
+.container{
+    margin-left: 20px;
+}
+
+.filme-principal .container{
+    width: 70%;
+}
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+
+.carrosel-filmes{
+    margin-top:5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
